<resources>
    <string name="app_name">RecipeList</string>
    <string name="submit">submit</string>
    <string name="delete">Delete</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="first">first</string>
    <string name="second">second</string>
    <string name="third">third</string>
    <string name="n">n</string>
</resources>